--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,36 @@ h1 {
     text-align: center;
     color: blueviolet;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    align-self: center;
+}
+
+.board {
+    display: grid;
+    height: 400px;
+    width: 400px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    border: 1px solid black;
+    gap: 2px;
+    padding: 2px;
+    background-color: yellow;
+  }
+  
+  .cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /*font-size: 2rem;*/
+    font-size: 48px;
+    border: 1px solid grey;
+    background: lightyellow;
+    cursor: pointer;
+  }
